--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ html {
     text-decoration: line-through;
 }
 
-.inline-text:hover ~ .inline-btn {
+.item:hover .inline-btn {
     display: block;
 }
 
@@ -80,8 +80,8 @@ html {
 }
 
 .inline-btn {
-    margin: 0 1rem;
-    padding: 0.125rem 0.25rem;
+    margin: 0 0.25rem;
+    padding: 0 0.25rem;
 
     border-radius: 0.25rem;
 
@@ -90,6 +90,10 @@ html {
 .inline-btn:hover {
     background-color: hsl(210, 10%, 20%);
     color: white;
+}
+
+.item:hover {
+    background-color: hsl(1, 0%, 80%);
 }
 
 /* 5. Responsive Design
